--- a/test.ipynb
+++ b/test.ipynb
@@ -16,26 +16,26 @@
     "\n",
     "### Data Downloading\n",
     "* For pretraining:\n",
-    "    1. Create ```/pretrain/data/swissprot``` directory.\n",
-    "    2. Download the data at [Swiss Prot](https://ftp.ebi.ac.uk/pub/databases/alphafold/latest/swissprot_pdb_v4.tar).\n",
-    "    3. Move the downloaded files into the ```/pretrain/data/swissprot``` directory and extract it.\n",
+    "    * Create ```/pretrain/data/swissprot``` directory.\n",
+    "    * Download the data at [Swiss Prot](https://ftp.ebi.ac.uk/pub/databases/alphafold/latest/swissprot_pdb_v4.tar).\n",
+    "    * Move the downloaded files into the ```/pretrain/data/swissprot``` directory and extract it.\n",
     "* For downstream tasks:\n",
-    "    1. Create ```downstreamtasks/data/{dataset_name}``` directory.\n",
-    "    2. Download the data at: [Atom3D_MSP](https://zenodo.org/records/4962515/files/MSP-split-by-sequence-identity-30.tar.gz), [DAVIS](),\n",
+    "    * Create ```downstreamtasks/data/{dataset_name}``` directory.\n",
+    "    * Download the data at: [Atom3D_MSP](https://zenodo.org/records/4962515/files/MSP-split-by-sequence-identity-30.tar.gz), [DAVIS](),\n",
     "    [KIBA](), [PDBbind](), [SCOPe1.75](https://drive.google.com/uc?export=download&id=1chZAkaZlEBaOcjHQ3OUOdiKZqIn36qar), [D&D](https://drive.google.com/uc?export=download&id=1KTs5cUYhG60C6WagFp4Pg8xeMgvbLfhB).\n",
-    "    3. Move the downloaded files into the ```downstreamtasks/data/{dataset_name}``` directory and extract it.\n",
+    "    * Move the downloaded files into the ```downstreamtasks/data/{dataset_name}``` directory and extract it.\n",
     "\n",
     "### Data Preprocessing\n",
     "* For pretraining, run these commands:\n",
-    "    ```\n",
-    "    cd /pretrain/data/\n",
-    "    python *.py\n",
-    "    ```\n",
+    "```\n",
+    "cd /pretrain/data/\n",
+    "python *.py\n",
+    "```\n",
     "* For downstream tasks, run these commands:\n",
-    "    ```\n",
-    "    cd /downstreamtasks/data/\n",
-    "    python *.py\n",
-    "    ```\n",
+    "```\n",
+    "cd /downstreamtasks/data/\n",
+    "python *.py\n",
+    "```\n",
     "### Pretraining\n",
     "\n",
     "### Downstream Tasks\n",
